# unitree_robotics_suite

./: .gitignore  LICENSE  README.md  banned.txt  environment.yml  environment_teleop.yml  environment_training.yml  pyproject.toml  requirements_robot_oakd.txt  requirements_robot_realsense.txt
assets/hand16/: hand16.yml
deployment/: autonomous.py  eval_g1.py  eval_g1_dataset.py  eval_g1_sim.py  make_robot.py  replay_robot.py  signal_server.py
deployment/autonomous/: README.md  __init__.py  executor.py  policy_manager.py  signal_handler.py  types.py
deployment/utils/: sim_savedata_utils.py  utils.py
scripts/: run_autonomous_g1.sh  run_g1.sh
teleop/: teleop_hand_and_arm.py
teleop/robot_control/: foot_switch.py  hand_retargeting.py  robot_arm.py  robot_hand_brainco.py  robot_hand_hand16.py
teleop/teleimager/src/teleimager/: oak_d_server.py  test_oak_client.py
teleop/utils/: GPIO_README.md  read_gpio.py  renumber_episodes.py  update_descriptions_interactive.py  update_task_descriptions.py
utils/: convert_unitree_json_to_lerobot.py
